Feat: Application backend

--- a/Triumph_Tales/Properties/launchSettings.json
+++ b/Triumph_Tales/Properties/launchSettings.json
@@ -1,28 +1,16 @@
 ﻿{
-  "iisSettings": {
-    "windowsAuthentication": false,
-    "anonymousAuthentication": true,
-    "iisExpress": {
-      "applicationUrl": "http://localhost:16614",
-      "sslPort": 0
-    }
-  },
   "profiles": {
-    "http": {
+    "TriumphTales": {
       "commandName": "Project",
+      "environmentVariables": {
+        "ASPNETCORE_ENVIRONMENT": "Development"
+      },
       "dotnetRunMessages": true,
       "launchBrowser": true,
-      "applicationUrl": "http://localhost:5238",
-      "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
-      }
-    },
-    "IIS Express": {
-      "commandName": "IISExpress",
-      "launchBrowser": true,
-      "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
-      }
+      "launchUrl": "api/swagger",
+
+      "applicationUrl": "http://localhost:5107",
+      "sqlDebugging": true
     }
   }
 }
